# snake

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.c  snake.c  snake.h  util.c  util.h
